--- a/web-app/package.json
+++ b/web-app/package.json
@@ -4,7 +4,7 @@
   "description": "A global financing web-application",
   "scripts": {
     "start": "node index",
-    "lint": "eslint --ignore-path .gitignore ."
+    "lint": "eslint --ignore-path ../.eslintignore ."
   },
   "engines": {
     "node": ">=8",
